Add a missing beforeinput event in InputMethodController::SetComposition()

Currently, if an IME calls InputMethodController::SetComposition() with an empty
replacement string when no composition is open but some text is selected (so
the effect is to delete the selected text), we fire an input event, but not a
beforeinput event. This CL adds the beforeinput event.

Bug: 796690
Change-Id: Icc0226103e515d51aa58ab7c8c4bed1f1180b0a3